# mle-tech-interviews

./: .gitignore  README.md  pyproject.toml
data-structure-challenges/leetcode/: 1. Two Sum.py  11. Container With Most Water.py  118. Pascal's Triangle.py  121. Best Time to Buy and Sell Stock.py  1249. Minimum Remove to Make Valid Parentheses.py  1332. Remove Palindromic Subsequences.py  1337. The K Weakest Rows in a Matrix.py  15. 3Sum.py  152. Maximum Product Subarray.py  153. Find Minimum in Rotated Sorted Array.py  1539. Kth Missing Positive Number.py  1640. Check Array Formation Through Concatenation.py  171. Excel Sheet Column Number.py  1710. Maximum Units on a Truck.py  190. Reverse Bits.py  191. Number of 1 Bits.py  199. Binary Tree Right Side View.py  20. Valid Parentheses.py  209. Minimum Size Subarray Sum.py  217. Contains Duplicate.py  238. Product of Array Except Self.py  268. Missing Number.py  278. First Bad Version.py  289. Game of Life.py  33. Search in Rotated Sorted Array.py  338. Counting Bits.py  347. Top K Frequent Elements.py  362. Design Hit Counter.py  371. Sum of Two Integers.py  380. Insert Delete GetRandom O(1).py  383. Ransom Note.py  415. Add Strings.py  42. Trapping Rain Water.py  442. Find All Duplicates in an Array.py  45. Jump Game II.py  463. Island Perimeter.py  495. Teemo Attacking.py  53. Maximum Subarray.py  543. Diameter of Binary Tree.py  56. Merge Intervals.py  (+18 more)
data-structure-challenges/misc/: basket1.py  shopify_id_check.py
sql-challenges/hackerrank/: 15 Days of Learning SQL.sql  (+7 more)
system-design-challenges/: README.md
(+7 files in other folders)
