[tool.poetry]
name = "mle-tech-interviews"
version = "0.1.0"
description = "DSA and SQL challenges for Leetcode and HackerRank"
authors = ["Enrique Herreros <kikexclusive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
